[package]
name = "cloudz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
colored = "2.0.0"
comfy-table = "6.1.2"
chrono = "0.4"
confy = "0.3.1"
